# datalog-interpreter-project

./: CMakeLists.txt  README.md  input
Project1_Starter_Code/: BlockComment.cpp  BlockComment.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  LineComment.cpp  MatcherAutomaton.h  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rules.cpp  Rules.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  main.cpp
datalog-interpreter-code/: Automaton.h  BlockComment.cpp  BlockComment.h  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.h  LineComment.cpp  LineComment.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.h  Rules.cpp  Rules.h  StringAutomaton.h  Token.h  Tuple.h
